--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.12.1",
     "next": "^12.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -19,6 +20,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.38",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.4.3",
     "typescript": "5.4.4"
   }
