--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@prisma/client": "^5.12.1",
     "next": "^12.0.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.2"
   },
   "devDependencies": {
     "@types/node": "20.12.5",
