--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "@types/nodemailer": "^6.4.14",
+    "iron-session": "^6.3.1",
     "next": "^12.0.7",
+    "nodemailer": "^6.9.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.51.2"
+    "react-hook-form": "^7.51.2",
+    "twilio": "^5.0.4"
   },
   "devDependencies": {
     "@types/node": "20.12.5",
